3rdParty/SDL2_mixer/VisualC/external/include/mpg123.h

typedef ptrdiff_t ssize_t;
#define mpg123_open         MPG123_LARGENAME(mpg123_open)
#define mpg123_open_fd      MPG123_LARGENAME(mpg123_open_fd)
#define mpg123_decode_frame MPG123_LARGENAME(mpg123_decode_frame)
#define mpg123_tell         MPG123_LARGENAME(mpg123_tell)
#define mpg123_tellframe    MPG123_LARGENAME(mpg123_tellframe)
#define mpg123_seek         MPG123_LARGENAME(mpg123_seek)
#define mpg123_feedseek     MPG123_LARGENAME(mpg123_feedseek)
#define mpg123_seek_frame   MPG123_LARGENAME(mpg123_seek_frame)
#define mpg123_timeframe    MPG123_LARGENAME(mpg123_timeframe)
#define mpg123_index        MPG123_LARGENAME(mpg123_index)
#define mpg123_position     MPG123_LARGENAME(mpg123_position)
#define mpg123_length       MPG123_LARGENAME(mpg123_length)
#define mpg123_replace_reader MPG123_LARGENAME(mpg123_replace_reader)
typedef struct mpg123_handle_struct mpg123_handle;
MPG123_EXPORT int mpg123_init(void);
MPG123_EXPORT void mpg123_exit(void);
MPG123_EXPORT mpg123_handle *mpg123_new(const char* decoder, int *error);
MPG123_EXPORT void mpg123_delete(mpg123_handle *mh);
enum mpg123_parms
{
	MPG123_VERBOSE = 0,        
	MPG123_FLAGS,          
	MPG123_ADD_FLAGS,      
	MPG123_FORCE_RATE,     
	MPG123_DOWN_SAMPLE,    
	MPG123_RVA,            
	MPG123_DOWNSPEED,      
	MPG123_UPSPEED,        
	MPG123_START_FRAME,     
	MPG123_DECODE_FRAMES,  
	MPG123_ICY_INTERVAL,   
	MPG123_OUTSCALE,       
	MPG123_TIMEOUT,        
	MPG123_REMOVE_FLAGS,   
	MPG123_RESYNC_LIMIT,   
	MPG123_INDEX_SIZE      
	,MPG123_PREFRAMES 
	,MPG123_FEEDPOOL  
	,MPG123_FEEDBUFFER 
};
enum mpg123_param_flags
{
	 MPG123_FORCE_MONO   = 0x7  
	,MPG123_MONO_LEFT    = 0x1  
	,MPG123_MONO_RIGHT   = 0x2  
	,MPG123_MONO_MIX     = 0x4  
	,MPG123_FORCE_STEREO = 0x8  
	,MPG123_FORCE_8BIT   = 0x10 
	,MPG123_QUIET        = 0x20 
	,MPG123_GAPLESS      = 0x40 
	,MPG123_NO_RESYNC    = 0x80 
	,MPG123_SEEKBUFFER   = 0x100 
	,MPG123_FUZZY        = 0x200 
	,MPG123_FORCE_FLOAT  = 0x400 
	,MPG123_PLAIN_ID3TEXT = 0x800 
	,MPG123_IGNORE_STREAMLENGTH = 0x1000 
	,MPG123_SKIP_ID3V2 = 0x2000 
	,MPG123_IGNORE_INFOFRAME = 0x4000 
	,MPG123_AUTO_RESAMPLE = 0x8000 
	,MPG123_PICTURE = 0x10000 
	,MPG123_NO_PEEK_END    = 0x20000 
	,MPG123_FORCE_SEEKABLE = 0x40000 
};
enum mpg123_param_rva
{
	 MPG123_RVA_OFF   = 0 
	,MPG123_RVA_MIX   = 1 
	,MPG123_RVA_ALBUM = 2 
	,MPG123_RVA_MAX   = MPG123_RVA_ALBUM 
};
MPG123_EXPORT int mpg123_param( mpg123_handle *mh
,	enum mpg123_parms type, long value, double fvalue );
MPG123_EXPORT int mpg123_getparam( mpg123_handle *mh
,	enum mpg123_parms type, long *value, double *fvalue );
enum mpg123_errors
{
	MPG123_DONE=-12,	
	MPG123_NEW_FORMAT=-11,	
	MPG123_NEED_MORE=-10,	
	MPG123_ERR=-1,			
	MPG123_OK=0, 			
	MPG123_BAD_OUTFORMAT, 	
	MPG123_BAD_CHANNEL,		
	MPG123_BAD_RATE,		
	MPG123_ERR_16TO8TABLE,	
	MPG123_BAD_PARAM,		
	MPG123_BAD_BUFFER,		
	MPG123_OUT_OF_MEM,		
	MPG123_NOT_INITIALIZED,	
	MPG123_BAD_DECODER,		
	MPG123_BAD_HANDLE,		
	MPG123_NO_BUFFERS,		
	MPG123_BAD_RVA,			
	MPG123_NO_GAPLESS,		
	MPG123_NO_SPACE,		
	MPG123_BAD_TYPES,		
	MPG123_BAD_BAND,		
	MPG123_ERR_NULL,		
	MPG123_ERR_READER,		
	MPG123_NO_SEEK_FROM_END,
	MPG123_BAD_WHENCE,		
	MPG123_NO_TIMEOUT,		
	MPG123_BAD_FILE,		
	MPG123_NO_SEEK,			
	MPG123_NO_READER,		
	MPG123_BAD_PARS,		
	MPG123_BAD_INDEX_PAR,	
	MPG123_OUT_OF_SYNC,	
	MPG123_RESYNC_FAIL,	
	MPG123_NO_8BIT,	
	MPG123_BAD_ALIGN,	
	MPG123_NULL_BUFFER,	
	MPG123_NO_RELSEEK,	
	MPG123_NULL_POINTER, 
	MPG123_BAD_KEY,	
	MPG123_NO_INDEX,	
	MPG123_INDEX_FAIL,	
	MPG123_BAD_DECODER_SETUP,	
	MPG123_MISSING_FEATURE  
	,MPG123_BAD_VALUE 
	,MPG123_LSEEK_FAILED 
	,MPG123_BAD_CUSTOM_IO 
	,MPG123_LFS_OVERFLOW 
	,MPG123_INT_OVERFLOW 
};
MPG123_EXPORT const char* mpg123_plain_strerror(int errcode);
MPG123_EXPORT const char* mpg123_strerror(mpg123_handle *mh);
MPG123_EXPORT int mpg123_errcode(mpg123_handle *mh);
MPG123_EXPORT const char **mpg123_decoders(void);
MPG123_EXPORT const char **mpg123_supported_decoders(void);
MPG123_EXPORT int mpg123_decoder(mpg123_handle *mh, const char* decoder_name);
enum mpg123_channelcount
{
	 MPG123_MONO   = 1 
	,MPG123_STEREO = 2 
};
MPG123_EXPORT void mpg123_rates(const long **list, size_t *number);
MPG123_EXPORT void mpg123_encodings(const int **list, size_t *number);
MPG123_EXPORT int mpg123_format_none(mpg123_handle *mh);
MPG123_EXPORT int mpg123_format_all(mpg123_handle *mh);
MPG123_EXPORT int mpg123_format( mpg123_handle *mh
,	long rate, int channels, int encodings );
MPG123_EXPORT int mpg123_format_support( mpg123_handle *mh
,	long rate, int encoding );
MPG123_EXPORT int mpg123_getformat( mpg123_handle *mh
,	long *rate, int *channels, int *encoding );
MPG123_EXPORT int mpg123_open(mpg123_handle *mh, const char *path);
MPG123_EXPORT int mpg123_open_fd(mpg123_handle *mh, int fd);
MPG123_EXPORT int mpg123_open_feed(mpg123_handle *mh);
MPG123_EXPORT int mpg123_close(mpg123_handle *mh);
MPG123_EXPORT int mpg123_read(mpg123_handle *mh
,	unsigned char *outmemory, size_t outmemsize, size_t *done );
MPG123_EXPORT int mpg123_decode( mpg123_handle *mh
,	const unsigned char *inmemory, size_t inmemsize
,	unsigned char *outmemory, size_t outmemsize, size_t *done );
MPG123_EXPORT int mpg123_decode_frame( mpg123_handle *mh
,	off_t *num, unsigned char **audio, size_t *bytes );
MPG123_EXPORT off_t mpg123_tell(mpg123_handle *mh);
MPG123_EXPORT off_t mpg123_tellframe(mpg123_handle *mh);
MPG123_EXPORT off_t mpg123_seek( mpg123_handle *mh
,	off_t sampleoff, int whence );
MPG123_EXPORT off_t mpg123_feedseek( mpg123_handle *mh
,	off_t sampleoff, int whence, off_t *input_offset );
MPG123_EXPORT off_t mpg123_seek_frame( mpg123_handle *mh
,	off_t frameoff, int whence );
MPG123_EXPORT off_t mpg123_timeframe(mpg123_handle *mh, double sec);
MPG123_EXPORT int mpg123_index( mpg123_handle *mh
,	off_t **offsets, off_t *step, size_t *fill );
MPG123_EXPORT int mpg123_position( mpg123_handle *mh, off_t frame_offset, off_t buffered_bytes, off_t *current_frame, off_t *frames_left, double *current_seconds, double *seconds_left);
enum mpg123_channels
{
	 MPG123_LEFT=0x1	
	,MPG123_RIGHT=0x2	
	,MPG123_LR=0x3	
};
MPG123_EXPORT int mpg123_eq( mpg123_handle *mh
,	enum mpg123_channels channel, int band, double val );
MPG123_EXPORT int mpg123_reset_eq(mpg123_handle *mh);
MPG123_EXPORT int mpg123_volume(mpg123_handle *mh, double vol);
MPG123_EXPORT int mpg123_volume_change(mpg123_handle *mh, double change);
MPG123_EXPORT int mpg123_getvolume(mpg123_handle *mh, double *base, double *really, double *rva_db);
enum mpg123_vbr {
	MPG123_CBR=0,	
	MPG123_VBR,		
	MPG123_ABR		
};
enum mpg123_version {
	MPG123_1_0=0,	
	MPG123_2_0,		
	MPG123_2_5		
};
enum mpg123_mode {
	MPG123_M_STEREO=0,	
	MPG123_M_JOINT,		
	MPG123_M_DUAL,		
	MPG123_M_MONO		
};
enum mpg123_flags {
	MPG123_CRC=0x1,			
	MPG123_COPYRIGHT=0x2,	
	MPG123_PRIVATE=0x4,		
	MPG123_ORIGINAL=0x8	
};
struct mpg123_frameinfo
{
	enum mpg123_version version;	
	int layer;						
	long rate; 						
	enum mpg123_mode mode;			
	int mode_ext;					
	int framesize;					
	enum mpg123_flags flags;		
	int emphasis;					
	int bitrate;					
	int abr_rate;					
	enum mpg123_vbr vbr;			
};
MPG123_EXPORT int mpg123_info(mpg123_handle *mh, struct mpg123_frameinfo *mi);
MPG123_EXPORT size_t mpg123_safe_buffer(void);
MPG123_EXPORT int mpg123_scan(mpg123_handle *mh);
MPG123_EXPORT off_t mpg123_length(mpg123_handle *mh);
MPG123_EXPORT double mpg123_tpf(mpg123_handle *mh);
MPG123_EXPORT long mpg123_clip(mpg123_handle *mh);
typedef struct 
{
	char* p;     
	size_t size; 
	size_t fill; 
} mpg123_string;
MPG123_EXPORT void mpg123_init_string(mpg123_string* sb);
MPG123_EXPORT void mpg123_free_string(mpg123_string* sb);
MPG123_EXPORT int mpg123_resize_string(mpg123_string* sb, size_t news);
MPG123_EXPORT int mpg123_copy_string(mpg123_string* from, mpg123_string* to);
MPG123_EXPORT int mpg123_add_string(mpg123_string* sb, const char* stuff);
MPG123_EXPORT int mpg123_set_string(mpg123_string* sb, const char* stuff);
#define MPG123_ID3     0x3 
#define MPG123_NEW_ID3 0x1 
#define MPG123_ICY     0xc 
#define MPG123_NEW_ICY 0x4 
MPG123_EXPORT int mpg123_meta_check(mpg123_handle *mh);
typedef struct mpg123_pars_struct   mpg123_pars;
MPG123_EXPORT mpg123_handle *mpg123_parnew( mpg123_pars *mp
,	const char* decoder, int *error );
MPG123_EXPORT mpg123_pars *mpg123_new_pars(int *error);
MPG123_EXPORT void mpg123_delete_pars(mpg123_pars* mp);
MPG123_EXPORT int mpg123_fmt_none(mpg123_pars *mp);
MPG123_EXPORT int mpg123_fmt_all(mpg123_pars *mp);
MPG123_EXPORT int mpg123_fmt(mpg123_pars *mp
,	long rate, int channels, int encodings);
MPG123_EXPORT int mpg123_fmt_support(mpg123_pars *mp, long rate, int encoding);
MPG123_EXPORT int mpg123_par( mpg123_pars *mp
,	enum mpg123_parms type, long value, double fvalue );
MPG123_EXPORT int mpg123_getpar( mpg123_pars *mp
,	enum mpg123_parms type, long *value, double *fvalue);
MPG123_EXPORT int mpg123_replace_buffer(mpg123_handle *mh
,	unsigned char *data, size_t size);
MPG123_EXPORT size_t mpg123_outblock(mpg123_handle *mh);
MPG123_EXPORT int mpg123_replace_reader( mpg123_handle *mh
,	ssize_t (*r_read) (int, void *, size_t)
,	off_t (*r_lseek)(int, off_t, int)
);
MPG123_EXPORT int mpg123_replace_reader_handle( mpg123_handle *mh
,	ssize_t (*r_read) (void *, void *, size_t)
,	off_t (*r_lseek)(void *, off_t, int)
,	void (*cleanup)(void*) );